# rust-url-shortener

./: Cargo.toml  README.md
migrations/2024-07-19-232325_create_urls/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  urls.rs
