[package]
name = "rust_url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
deadpool-diesel = {version = "0.6.1", features = ["postgres"]}
diesel = {version = "2.2.2",  features = ["postgres"]}
diesel_migrations = "2.2.0"
nanoid = "0.4.0"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
